--- a/tigo/package.json
+++ b/tigo/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "start": "node --env-file=.env -r ts-node/register ./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@playwright/test": "^1.44.1",
     "dotenv": "^16.4.5",
-    "@playwright/test": "^1.44.1"
+    "express": "^4.19.2"
   }
 }
