--- a/tigo/config.yaml
+++ b/tigo/config.yaml
@@ -7,8 +7,10 @@ description: Example add-on by Community Home Assistant Add-ons
 url: https://github.com/tdangschulz/tigo-data-reader
 codenotary: codenotary@frenck.dev
 webui: "http://[HOST]:[PORT:3000]/"
-ingress: true
-ingress_port: 7070
+ports:
+  3000/tcp: 3000
+ports_description:
+  3000/tcp: express Web interface
 init: false
 options:
   TIGO_USER": ""
@@ -18,7 +20,7 @@ options:
   log_level: info
   seconds_between_quotes: 5
 arch:
-  - amd64
+  - i386
 schema:
   log_level: str
   seconds_between_quotes: int(1,120)
