--- a/tigo/package.json
+++ b/tigo/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node --env-file=.env -r ts-node/register ./src/index.ts"
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
